[package]
name = "gravity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
rand = "0.8.5"
rand_pcg = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.1.1"
imageproc = "0.23.0"
rayon = "1.5.3"
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
bytemuck = "1.11.0"
num-traits = "0.2.15"
conv = "0.3.3"
